# hackathon2-todos

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  tmpclaude-a03d-cwd
.claude/: settings.local.json
.claude/agents/: auth-system-architect.md  fastapi-backend-engineer.md  nextjs-frontend-engineer.md  orchestrator-agent.md
.claude/skills/database/: neon-setup.md
.claude/skills/docker/: python-dockerfile.md
.claude/skills/fastapi/: auth-setup.md  task-crud.md
.claude/skills/kubernetes/: helm-chart.md
.claude/skills/nextjs/: auth-layout.md  nextjs-task-ui.md
.spec-kit/: config.yaml
.specify/memory/: constitution.md
history/prompts/001-phase2-fullstack/: 20260107-phase2-fullstack-plan.md  20260107-phase2-fullstack-spec.md
phase1/: README.md
phase1/src/: main.py
phase2/: tmpclaude-9ee0-cwd
phase2/backend/: .env.example  Dockerfile  README.md  app.py  main.py  pytest.ini  requirements.txt  server.py
phase2/docs/: AGENT_SKILL_USAGE.md  DEPLOYMENT.md  QUICKSTART.md
phase2/frontend/: .env.example  jest.config.js  netlify.toml  next.config.js  package-lock.json  package.json  tailwind.config.js  tmpclaude-3b15-cwd  vercel.json
phase2/specs/: data-model.md  plan.md
phase4/: README.md
phase4/specs/: implement.md
specs/: architecture.md  constitution.md  overview.md
specs/001-k8s-deployment/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-phase1-console-app/: data-model.md  quickstart.md  spec.md  tasks.md
specs/001-phase2-fullstack/: spec.md  tasks.md
(+64 files in other folders)
